Inline integration tests in CI pipeline
We don't need GOPATH set. We don't need a weird, one-off Docker image I
created 3 years ago.

Fixes <https://ci.nono.io/teams/main/pipelines/u2date/jobs/integration/builds/3>:
```
u2date/ci/tasks/test-unit.sh: line 3: GOPATH: unbound variable
```

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -18,11 +18,16 @@ jobs:
       image_resource:
         type: docker-image
         source:
-          repository: blabbertabber/golang-ginko
+          repository: cunnie/fedora-golang-bosh
       inputs:
       - name: u2date
       run:
-        path: u2date/ci/tasks/test-unit.sh
+        dir: u2date/u2date
+        path: ginkgo
+        args:
+        - -r
+        - -p
+        - .
 
 resources:
 - name: u2date
