--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -16,7 +16,7 @@ jobs:
     config:
       platform: linux
       image_resource:
-        type: docker-image
+        type: registry-image
         source:
           repository: cunnie/fedora-golang-bosh
       inputs:
@@ -31,6 +31,7 @@ jobs:
 
 resources:
 - name: u2date
+  icon: github
   type: git
   source:
     uri: https://github.com/cunnie/u2date
