🐞 No VCS stamping when running tests
Fixes, when running `ginkgo`:

```
<*errors.errorString | 0xc0002a02a0>: {
    s: "Failed to build github.com/cunnie/u2date/u2date:\n\nError:\nexit status 1\n\nOutput:\nerror obtaining VCS status: exit status 128\n\tUse -buildvcs=false to disable VCS stamping.\n",
````

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,4 +16,4 @@ jobs:
 
     - name: Run Ginkgo Tests
       working-directory: u2date
-      run: ginkgo -r -p . 
+      run: ginkgo -buildvcs=false -r -p .
